--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
   "url": "https://t.me/SaveKraken_bot",
   "name": "SaveKraken Bot",
-  "iconUrl": "https://raw.githubusercontent.com/YourGitHubUsername/your-repo/main/logo.png",
+  "iconUrl": "https://github.com/3hot82/Ton_pay/blob/main/11.jpg",
   "termsOfUseUrl": "https://telegra.ph/Pravila-ispolzovaniya-bota-dlya-polzovatelej-VIP-pozhertvovaniya-07-09",
   "privacyPolicyUrl": "https://telegra.ph/Pravila-ispolzovaniya-bota-dlya-polzovatelej-VIP-pozhertvovaniya-07-09"
 }
