--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -4,4 +4,5 @@
   "iconUrl": "https://raw.githubusercontent.com/3hot82/Ton_pay/main/11.jpg",
   "termsOfUseUrl": "https://telegra.ph/Pravila-ispolzovaniya-bota-dlya-polzovatelej-VIP-pozhertvovaniya-07-09",
   "privacyPolicyUrl": "https://telegra.ph/Pravila-ispolzovaniya-bota-dlya-polzovatelej-VIP-pozhertvovaniya-07-09"
+  "network": "testnet"
 }
